--- a/test/ChangeLog
+++ b/test/ChangeLog
@@ -1,3 +1,9 @@
+2012-11-14  Dmitry Gutov  <dgutov@yandex.ru>
+
+	* automated/ruby-mode-tests.el (ruby-indent-singleton-class): Pass.
+	(ruby-indent-inside-heredoc-after-operator)
+	(ruby-indent-inside-heredoc-after-space): New tests.
+
 2012-11-13  Dmitry Gutov  <dgutov@yandex.ru>
 
 	* automated/ruby-mode-tests.el (ruby-heredoc-font-lock)
