--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-11-14  Glenn Morris  <rgm@gnu.org>
+
+	* subr.el (set-temporary-overlay-map): Doc fix.
+
 2012-11-13  Martin Rudalics  <rudalics@gmx.at>
 
 	* window.el (record-window-buffer)
