--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,10 @@
+2012-11-15  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* eval.c (mark_backtrace) [BYTE_MARK_STACK]: Remove stray '*'.
+	This follows up on the 2012-09-29 patch that removed indirection
+	for the 'function' field.  Reported by Sergey Vinokurov in
+	<http://lists.gnu.org/archive/html/emacs-devel/2012-11/msg00263.html>.
+
 2012-11-14  Eli Zaretskii  <eliz@gnu.org>
 
 	* w32.c (faccessat): Rename from sys_faccessat.  (No need to use a
