--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,10 @@
+2012-11-15  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* emacs-lisp/nadvice.el (advice--make-interactive-form):
+	Fix string-spec case.
+
+	* emacs-lisp/advice.el (ad-make-advised-definition): Fix undefined case.
+
 2012-11-15  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* emacs-lisp/nadvice.el: Add buffer-local support to add-function.
