--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-15  Juanma Barranquero  <lekktu@gmail.com>
+
+	* makefile.w32-in ($(BLD)/dispnew.$(O), $(BLD)/emacs.$(O)):
+	Update dependencies.
+
 2012-11-15  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* eval.c (mark_backtrace) [BYTE_MARK_STACK]: Remove stray '*'.
