* lisp/faces.el (face-underline-p): Use face-attribute-specified-or.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-11-16  Glenn Morris  <rgm@gnu.org>
+
+	* faces.el (face-underline-p): Use face-attribute-specified-or.
+
 2012-11-15  Juanma Barranquero  <lekktu@gmail.com>
 
 	* emacs-lisp/cl-macs.el (cl-loop, cl-do, cl-do*): Doc fixes.
