--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,7 @@
+2012-11-16  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* emacs-lisp/cl-lib.el: Set more meaningful version number.
+
 2012-11-16  Martin Rudalics  <rudalics@gmx.at>
 
 	* window.el (enlarge-window, shrink-window): Don't mention return
