--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-16  Eli Zaretskii  <eliz@gnu.org>
+
+	* trouble.texi (Crashing): Add information about MS-Windows and
+	the emacs_backtrace.txt file.  (Bug#12908)
+
 2012-11-13  Chong Yidong  <cyd@gnu.org>
 
 	* building.texi (Multithreaded Debugging): gdb-stopped-hooks is
